// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-taboola-actions destination: syncAudience action - all fields 1`] = `
Object {
  "audience_id": "^4ckt",
  "identities": Array [
    Object {
      "cluster": Array [
        Object {
          "is_hashed": true,
          "type": "EMAIL_ID",
          "user_id": "52f1cf2122c86ad948d5280407305eb3146ab7e5e371d58be3869f373ffbc672",
        },
        Object {
          "is_hashed": false,
          "type": "DEVICE_ID",
          "user_id": "^4ckt",
        },
      ],
    },
  ],
  "operation": "REMOVE",
}
`;

exports[`Testing snapshot for actions-taboola-actions destination: syncAudience action - required fields 1`] = `
Object {
  "audience_id": "^4ckt",
  "identities": Array [
    Object {
      "cluster": Array [
        Object {
          "is_hashed": false,
          "type": "DEVICE_ID",
          "user_id": "^4ckt",
        },
      ],
    },
  ],
  "operation": "REMOVE",
}
`;
